# MetricsCollector

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  main.cpp
.github/workflows/: ci-cd.yml
docs/: app.md
include/core/: MetricCollector.hpp  MetricLogger.hpp
include/metrics/: Metric.hpp  Metric_AdEngagement.hpp  Metric_CPU.hpp  Metric_HTTP_Requests.hpp  Metric_Memory.hpp
src/core/: MetricCollector.cpp  MetricLogger.cpp
src/metrics/: Metric_AdEngagement.cpp  Metric_CPU.cpp  Metric_HTTP_Requests.cpp  Metric_Memory.cpp
tests/: CMakeLists.txt  benchmark_test.cpp  collector_test.cpp  concurrency_test.cpp  perfomance_test.cpp
